--- a/wp-content/themes/oceanwp-child-theme/style.css
+++ b/wp-content/themes/oceanwp-child-theme/style.css
@@ -23,10 +23,21 @@ a:hover {
     color: #0e64b6;
 }
 
+.container{
+    max-width: 1180px;
+}
+#main #content-wrap{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
 /*------------------------------------------Слайдеры----------------------------------------------------*/
 .content-area {
-    width: 74%;
+    width: calc(100% - 280px);
     border: none;
+}
+.content-left-sidebar .content-area{
+    padding-left: 20px;
 }
 
 .htslider-slider .slick-arrow {
@@ -83,6 +94,54 @@ a:hover {
 
 .hfe-nav-menu__layout-horizontal .hfe-nav-menu .sub-arrow {
     color: #0e64b6;
+}
+.br_product_day_3 .br_product_day{
+    max-width: 300px;
+}
+.woof_container_inner h4{
+    position: relative;
+}
+.woof_front_toggle{
+    position:absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    font-size: 0;
+    width: 100%;
+    height: 100%;
+    color: transparent;
+}
+.woof_front_toggle:before,
+.woof_front_toggle:after {
+    content: '';
+    width: 9px;
+    height: 1.5px;
+    background-color: #0E64B6;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.woof_front_toggle.woof_front_toggle_closed:before {
+    transform: rotate(-45deg);
+    right: 5px;
+}
+
+.woof_front_toggle.woof_front_toggle_closed:after {
+    transform: rotate(45deg);
+    right: 10px;
+}
+
+.woof_front_toggle.woof_front_toggle_opened:before {
+    transform: rotate(45deg);
+    background-color: #345AED;
+    right: 5px;
+}
+
+.woof_front_toggle.woof_front_toggle_opened:after {
+    transform: rotate(-45deg);
+    background-color: #345AED;
+    right: 10px;
 }
 
 /*-----------------------------------------------------------------------*/
@@ -190,7 +249,7 @@ a:hover {
 .card__product {
     max-width: 300px;
     padding: 5px;
-    min-width: 0;
+    min-width: 280px;
 }
 
 .card__product:hover {
@@ -436,12 +495,13 @@ a:hover {
     color: #212121;
     cursor: pointer;
     position: relative;
+    padding-right: 24px;
 }
 
 .categories__perent:before,
 .categories__perent:after {
     content: '';
-    width: 12px;
+    width: 9px;
     height: 1.5px;
     background-color: #0E64B6;
     position: absolute;
@@ -451,24 +511,24 @@ a:hover {
 
 .categories__perent:before {
     transform: rotate(-45deg);
-    right: 9px;
+    right: 5px;
 }
 
 .categories__perent:after {
     transform: rotate(45deg);
-    right: 17px;
+    right: 10px;
 }
 
 .categories__perent.active:before {
     transform: rotate(45deg);
     background-color: #345AED;
-    right: 9px;
+    right: 5px;
 }
 
 .categories__perent.active:after {
     transform: rotate(-45deg);
     background-color: #345AED;
-    right: 17px;
+    right: 10px;
 }
 
 .categories__perent:hover {
@@ -1010,7 +1070,7 @@ a:focus {
 }
 
 .widget-area {
-    width: 26% !important;
+    width: 280px !important;
 }
 
 .tinvwl-remove {
@@ -1243,11 +1303,15 @@ a:focus {
 .woocommerce-shop .widget.widget_berocket_products_of_day_widget {
     max-width: 1200px;
     margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .viewed__products {
     max-width: 1200px;
     margin: 0 auto;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .viewed__products .slick-track {
@@ -1418,6 +1482,8 @@ a:focus {
 .title__catalog {
     max-width: 1200px;
     margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
@@ -1440,7 +1506,8 @@ a:focus {
     max-width: 1200px;
     margin: 10px auto;
     color: #0E64B6;
-
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .tinvwl_add_to_wishlist_button.tinvwl-icon-custom no-txt.tinvwl-position-shortcode.ftinvwl-animated.tinvwl-loop.no-lightbox.tinvwl-product-in-list img {
@@ -1717,7 +1784,7 @@ a:focus {
 
 .woocommerce .oceanwp-toolbar {
     border: none !important;
-    margin: -35px 0px 0px !important;
+    margin: 0px 0px 0px !important;
 }
 
 .woof_reset_button_2 {
@@ -1743,6 +1810,9 @@ a:focus {
     color: #212121;
 }
 
+.woof_products_top_panel{
+    margin-bottom: 5px;
+}
 .woof_products_top_panel li span,
 .woof_products_top_panel2 li span {
     background: url(/wp-content/uploads/2022/09/free-icon-cross-mark-17047.png);
@@ -1775,6 +1845,52 @@ a:focus {
 }
 
 /*--------------------------------------------------------------------------------------------  */
+.card__product .price__product .price{
+    min-width: max-content;
+}
+.woocommerce ul.products li.product .added_to_cart.wc-forward{
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+    font-weight: 700;
+    background-color: #0e64b6;
+    font-size: 16px;
+    color: #FFFFFF;
+    padding: 8px 10px;
+    letter-spacing: 0.1em;
+    border-radius: 3px;
+    margin: 0;
+}
+.header_right-items{
+    min-width: fit-content;
+}
+#menu-item-1005,#menu-item-1020{
+    display: none;
+}
+.header_cart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.cartcontents_wrapper{
+    height: 30px;
+    padding: 0;
+    margin: 0;
+    min-width: max-content;
+}
+.cartcontents{
+    font-size: 14px;
+    color: #0e64b6;
+}
+.cart-text{
+    font-size: 14px;
+}
+.tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart.tinvwl-product-in-list:before {
+    content: url("./image/Vector-active.svg");
+}
+.tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product a.tinvwl-button.tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce-page ul.products li.product a.tinvwl-button.tinvwl-icon-heart.tinvwl_add_to_wishlist_button:before, a.wishlist_products_counter.top_wishlist-heart:before, span.wishlist_products_counter.top_wishlist-heart:before, a.sidr-class-wishlist_products_counter.sidr-class-top_wishlist-heart:before{
+    content: url("./image/Favorites.svg");
+}
 
 @media (max-width: 1330px) {
     .cart_totals .coupon .input-text {
@@ -1789,14 +1905,31 @@ a:focus {
         font-size: 11px;
     }
 }
-
+@media (max-width: 1200px) {
+    .woocommerce-page .products.oceanwp-row.clr.grid {
+        display: grid !important;
+        grid-template-columns:1fr 1fr !important;
+    }
+    .products.oceanwp-row.clr.grid li{
+        width: 280px;
+    }
+    body .oceanwp-row .span_1_of_3{
+        width: auto;
+    }
+    .woocommerce-page .viewed__products  .products.oceanwp-row.clr.grid {
+        grid-template-columns:1fr!important;;
+    }
+    .card__product {
+        margin: 0 auto;
+    }
+}
 @media (max-width: 1024px) {
     #wrap {
         margin: 0 auto;
     }
 
     .title__catalog {
-        margin: 10px 20px;
+        margin: 10px 0px;
     }
 
     .breadcrumbs__catalog {
@@ -1905,11 +2038,6 @@ a:focus {
         width: 65%;
     }
 
-    .woocommerce-page .products.oceanwp-row.clr.grid {
-        display: grid !important;
-        grid-template-columns:1fr 1fr !important;
-    }
-
     .woocommerce-page .oceanwp-row .span_1_of_3 {
         width: 100%;
     }
@@ -1917,11 +2045,22 @@ a:focus {
     .container {
         max-width: 98% !important;
     }
+    .cart-text{
+        display: none;
+    }
+    .header_nav_card nav{
+        margin-left: 13px;
+    }
+    .header_nav_card ul{
+        margin-right: 0;
+    }
 }
-
 @media (max-width: 959px) {
+    #main #content-wrap{
+        padding-top: 15px;
+    }
     .woocommerce .oceanwp-toolbar {
-        margin: 0px 15px !important;
+        margin: 0px 10px !important;
     }
 
     .woocommerce-page .sidebar-container {
@@ -1934,6 +2073,10 @@ a:focus {
 
     .woocommerce-ordering {
         display: none;
+    }
+    .woof_products_top_panel{
+        padding-right: 10px;
+        padding-left: 10px;
     }
 
     .filter-mobile {
@@ -2009,10 +2152,9 @@ a:focus {
     }
 
     .woof_reset_button_2 {
-        padding: 10px 3px;
+        padding: 10px 8px;
     }
 }
-
 @media (max-width: 767px) {
     .elementor-element-ad52475, .elementor-element-e106738, .elementor-element-3157973, .elementor-element-d970962, .elementor-element-c1c2523, .elementor-element-6be1368 {
         margin: 0px;
@@ -2064,7 +2206,6 @@ a:focus {
         display: block;
     }
 }
-
 @media (max-width: 580px) {
 
     .woocommerce-page .products.oceanwp-row.clr.grid {
@@ -2072,7 +2213,6 @@ a:focus {
         grid-template-columns:1fr !important;
     }
 }
-
 @media (max-width: 480px) {
 
     .ehf-footer .elementor-element-bce0249 .hfe-nav-menu__layout-horizontal .hfe-nav-menu {
@@ -2130,60 +2270,159 @@ a:focus {
     }
 }
 
-.tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-custom.no-txt {
-    width: auto;
-    height: auto;
+
+/*Sidebar*/
+.woof_redraw_zone{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #212121;
 }
-.card__product .price__product .price{
-    min-width: max-content;
+.woof_submit_search_form_container{
+    margin-bottom: 0;
+    margin-top: 0;
 }
-.woocommerce ul.products li.product .added_to_cart.wc-forward{
-    width: 100%;
-    text-align: center;
-    display: inline-block;
-    font-weight: 700;
-    background-color: #0e64b6;
-    font-size: 16px;
-    color: #FFFFFF;
-    padding: 8px 10px;
-    letter-spacing: 0.1em;
-    border-radius: 3px;
-    margin: 0;
+.woof_checkbox_instock_container{
+    padding: 20px 43px 20px 10px;
+    margin-left: -10px;
+    margin-right: -10px;
+    background: #E5EDF8;
 }
 
-.header_right-items{
-  min-width: fit-content;
-}
-#menu-item-1005,#menu-item-1020{
+input[type="checkbox"].woof_checkbox_instock{
+    visibility: hidden;
     display: none;
 }
 
-.header_cart{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.woof_checkbox_instock_inner label{
+    margin-bottom: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #212121;
+    cursor: pointer;
+    vertical-align: middle;
 }
-.cartcontents_wrapper{
-    height: 30px;
+.woof_checkbox_instock-custom-line{
+    display: inline-block;
+    width: 41px;
+    height: 14px;
+    margin-left: 17px;
+    background: #fff;
+    position: relative;
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px 0px #00000040;
+}
+.woof_checkbox_instock-custom-bubble{
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 50%;
+    left: -3px;
+    cursor: pointer;
+    background: #CFCFCF;
+    border-radius: 50%;
+    box-shadow: 0px 1px 3px 0px #00000040;
+    transform: translateY(-50%);
+    transition: all 0.4s ease;
+}
+.woof_checkbox_instock:checked + label .woof_checkbox_instock-custom-bubble{
+    left: 23px;
+    background: #0E64B6;
+}
+.woof_checkbox_instock-info{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #212121;
     padding: 0;
     margin: 0;
-    min-width: max-content;
 }
-.cartcontents{
+
+.woof_price_filter_txt_container{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.woof_price_filter_txt {
+    width: 102px!important;
+    height: 39px;
+    padding: 9px 20px 9px 10px;
+    background: #FFFFFF;
+    border: 1px solid #CFCFCF;
+    border-radius: 3px;
+
+    font-style: normal;
+    font-weight: 400;
     font-size: 14px;
-    color: #0e64b6;
+    line-height: 22px;
+    text-align: center;
+    color: #212121;
 }
-.cart-text{
+.woof_price_filter_txt::placeholder{
+    opacity: 0;
+    font-size: 0;
+}
+.woof_price_filter_txt_container:before{
+    content: "от";
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+
+    font-weight: 400;
     font-size: 14px;
+    line-height: 22px;
+    color: #CFCFCF;
 }
-@media(max-width: 1024px){
-    .cart-text{
-        display: none;
-    }
-    .header_nav_card nav{
-        margin-left: 13px;
-    }
-    .header_nav_card ul{
-        margin-right: 0;
-    }
+.woof_price_filter_txt_container:after{
+    content: "до";
+    position: absolute;
+    top: 50%;
+    right: 76px;
+    transform: translateY(-50%);
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #CFCFCF;
+}
+.woof_checkbox_label {
+     margin-left: 0 !important;
+}
+input[type=checkbox]{
+    width: 20px;
+    height: 20px;
+    position: relative;
+    background: #FFFFFF;
+    border: 1px solid #CFCFCF;
+    border-radius: 3px;
+    transition: all .3s linear;
+}
+input[type=checkbox]:checked:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-bottom: 0;
+    width: 20px;
+    height: 20px;
+    background-color: #0E64B6;
+    border: 1px solid  #0E64B6;
+    border-radius: 3px;
+}
+input[type=checkbox]:hover,
+input[type=checkbox]:active,
+input[type=checkbox]:focus{
+    border: 1px solid #0E64B6;
+}
+input[type=checkbox]:checked:hover:before {
+    background-color: rgba(14, 100, 182, 0.88);
+    border: 1px solid  rgba(14, 100, 182, 0.88);
 }
