--- a/wp-content/themes/oceanwp-child-theme/style.css
+++ b/wp-content/themes/oceanwp-child-theme/style.css
@@ -23,12 +23,12 @@ a:hover {
     color: #0e64b6;
 }
 
-.container{
-    max-width: 1180px;
+.container {
+    max-width: 1200px;
 }
-#main #content-wrap{
-    padding-top: 40px;
-    padding-bottom: 40px;
+
+#main #content-wrap {
+    padding: 40px 10px 80px;
 }
 
 /*------------------------------------------Слайдеры----------------------------------------------------*/
@@ -36,7 +36,8 @@ a:hover {
     width: calc(100% - 280px);
     border: none;
 }
-.content-left-sidebar .content-area{
+
+.content-left-sidebar .content-area {
     padding-left: 20px;
 }
 
@@ -95,14 +96,13 @@ a:hover {
 .hfe-nav-menu__layout-horizontal .hfe-nav-menu .sub-arrow {
     color: #0e64b6;
 }
-.br_product_day_3 .br_product_day{
-    max-width: 300px;
-}
-.woof_container_inner h4{
+
+.woof_container_inner h4 {
     position: relative;
 }
-.woof_front_toggle{
-    position:absolute;
+
+.woof_front_toggle {
+    position: absolute;
     top: 0;
     left: 0;
     display: inline-block;
@@ -111,6 +111,7 @@ a:hover {
     height: 100%;
     color: transparent;
 }
+
 .woof_front_toggle:before,
 .woof_front_toggle:after {
     content: '';
@@ -171,7 +172,7 @@ a:hover {
     font-size: 18px;
     line-height: 26px;
     color: rgba(33, 33, 33, 0.6);
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .tab-pane {
@@ -250,6 +251,7 @@ a:hover {
     max-width: 300px;
     padding: 5px;
     min-width: 280px;
+    margin: 0 auto;
 }
 
 .card__product:hover {
@@ -357,6 +359,16 @@ a:hover {
     right: -20px;
     border-radius: 50%;
     background-position: -4px -2px;
+}
+
+.woocommerce ul.products .product {
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.br_product_day_inner {
+    max-width: 300px;
+    margin: 0 auto;
 }
 
 /*---------------------------------------map---------------------------------------  */
@@ -556,12 +568,15 @@ a:hover {
 .wrapper__product {
     max-width: 1200px;
     margin: 0px auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .woocommerce-product-gallery--columns-4 {
     display: flex;
     flex-direction: row-reverse;
-    width: 40%;
+    width: 45%;
+    min-width: 420px;
 }
 
 .info_description {
@@ -579,7 +594,7 @@ a:hover {
 }
 
 .product__info {
-    width: 70%;
+    width: calc(100% - 280px);
 }
 
 .price__sale {
@@ -589,16 +604,14 @@ a:hover {
 
 .product__price {
     width: 100%;
-    padding: 20px;
-    height: 250px;
+    padding: 20px 20px 16px 20px;
     position: sticky;
     top: 0px;
     box-shadow: -1px -2px 8px rgba(138, 142, 148, 0.25), 2px 4px 8px rgba(138, 142, 148, 0.25);
 }
 
 .price__container {
-    width: 26%;
-    height: 800px;
+    width: 280px;
 }
 
 .price__regular {
@@ -703,8 +716,8 @@ a:hover {
 }
 
 .woocommerce-product-gallery__image img {
-    width: 380px;
-    height: 360px;
+    width: 100%;
+    height: auto;
 }
 
 .flex-viewport {
@@ -773,13 +786,14 @@ a:hover {
     border-bottom: 1px solid #CFCFCF;
     padding: 15px 10px 10px;
     text-align: right;
+    position: relative;
 }
 
 .info__delivery span {
-    display: inline-block;
+    position: absolute;
+    top: 33%;
+    left: 0;
     font-weight: 400;
-    margin: 0px 85px 0px 0px;
-    text-align: left;
 }
 
 .info__point-of-issue {
@@ -791,9 +805,14 @@ a:hover {
     color: #212121;
     padding: 10px;
     text-align: right;
+    position: relative;
 }
 
 .info__point-of-issue a {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
     display: inline-block;
     font-weight: 400;
     margin: 0px 97px 0px 0px;
@@ -1302,16 +1321,12 @@ a:focus {
 
 .woocommerce-shop .widget.widget_berocket_products_of_day_widget {
     max-width: 1200px;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin: 0 auto 80px;
 }
 
 .viewed__products {
     max-width: 1200px;
-    margin: 0 auto;
-    padding-right: 10px;
-    padding-left: 10px;
+    margin: 0 auto 80px;
 }
 
 .viewed__products .slick-track {
@@ -1482,14 +1497,14 @@ a:focus {
 .title__catalog {
     max-width: 1200px;
     margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 34px;
     color: #212121;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .title__catalog span {
@@ -1587,7 +1602,7 @@ a:focus {
 }
 
 .woocommerce-shop .br_product_for_day.br_product_day_3 .slick-prev {
-    left: -15px;
+    left: 0px;
     width: 48px;
     height: 51px;
     background-repeat: no-repeat;
@@ -1595,14 +1610,13 @@ a:focus {
 }
 
 .woocommerce-shop .br_product_for_day.br_product_day_3 .slick-next {
-    right: -15px;
+    right: 0px;
     width: 48px;
     height: 51px;
     background-image: url("data:image/svg+xml,%3Csvg width='48' height='51' viewBox='0 0 48 51' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_dd_181_2026)'%3E%3Cpath d='M44 23C44 34.0457 35.0457 43 24 43C12.9543 43 4 34.0457 4 23C4 11.9543 12.9543 3 24 3C35.0457 3 44 11.9543 44 23Z' fill='white'/%3E%3Cpath d='M19.3331 33L30 23L19.3331 13L18 14.2498L27.3338 23L18 31.7502L19.3331 33Z' fill='%23212121'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_dd_181_2026' x='0' y='0.5' width='48' height='50.5' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='4'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0.583333 0 0 0 0 0.583333 0 0 0 0 0.583333 0 0 0 0.25 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_181_2026'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='-0.5'/%3E%3CfeGaussianBlur stdDeviation='1'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0.584314 0 0 0 0 0.584314 0 0 0 0 0.584314 0 0 0 0.25 0'/%3E%3CfeBlend mode='normal' in2='effect1_dropShadow_181_2026' result='effect2_dropShadow_181_2026'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect2_dropShadow_181_2026' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E%0A");
 }
 
 .subcat {
-    margin-top: 80px;
     margin-bottom: 20px;
     font-family: 'Open Sans';
     font-style: normal;
@@ -1619,7 +1633,8 @@ a:focus {
     font-size: 24px;
     line-height: 34px;
     color: #212121;
-    margin-top: 80px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .page-id-719 .br_product_for_day.br_product_day_2 .slick-track {
@@ -1810,9 +1825,10 @@ a:focus {
     color: #212121;
 }
 
-.woof_products_top_panel{
+.woof_products_top_panel {
     margin-bottom: 5px;
 }
+
 .woof_products_top_panel li span,
 .woof_products_top_panel2 li span {
     background: url(/wp-content/uploads/2022/09/free-icon-cross-mark-17047.png);
@@ -1845,10 +1861,11 @@ a:focus {
 }
 
 /*--------------------------------------------------------------------------------------------  */
-.card__product .price__product .price{
+.card__product .price__product .price {
     min-width: max-content;
 }
-.woocommerce ul.products li.product .added_to_cart.wc-forward{
+
+.woocommerce ul.products li.product .added_to_cart.wc-forward {
     width: 100%;
     text-align: center;
     display: inline-block;
@@ -1861,35 +1878,48 @@ a:focus {
     border-radius: 3px;
     margin: 0;
 }
-.header_right-items{
+
+.header_right-items {
     min-width: fit-content;
 }
-#menu-item-1005,#menu-item-1020{
+
+#menu-item-1005, #menu-item-1020 {
     display: none;
 }
-.header_cart{
+
+.header_cart {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.cartcontents_wrapper{
+
+.cartcontents_wrapper {
     height: 30px;
     padding: 0;
     margin: 0;
     min-width: max-content;
 }
-.cartcontents{
+
+.cartcontents {
     font-size: 14px;
     color: #0e64b6;
 }
-.cart-text{
+
+.cart-text {
     font-size: 14px;
 }
+
 .tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart.tinvwl-product-in-list:before {
     content: url("./image/Vector-active.svg");
 }
-.tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product a.tinvwl-button.tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce-page ul.products li.product a.tinvwl-button.tinvwl-icon-heart.tinvwl_add_to_wishlist_button:before, a.wishlist_products_counter.top_wishlist-heart:before, span.wishlist_products_counter.top_wishlist-heart:before, a.sidr-class-wishlist_products_counter.sidr-class-top_wishlist-heart:before{
+
+.tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product a.tinvwl-button.tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce-page ul.products li.product a.tinvwl-button.tinvwl-icon-heart.tinvwl_add_to_wishlist_button:before, a.wishlist_products_counter.top_wishlist-heart:before, span.wishlist_products_counter.top_wishlist-heart:before, a.sidr-class-wishlist_products_counter.sidr-class-top_wishlist-heart:before {
     content: url("./image/Favorites.svg");
+}
+
+.pwb-product-carousel .pwb-slick-slide {
+    min-width: 280px;
+    max-width: 280px;
 }
 
 @media (max-width: 1330px) {
@@ -1905,24 +1935,44 @@ a:focus {
         font-size: 11px;
     }
 }
+
 @media (max-width: 1200px) {
-    .woocommerce-page .products.oceanwp-row.clr.grid {
+    .products.oceanwp-row.clr.grid {
         display: grid !important;
-        grid-template-columns:1fr 1fr !important;
+        grid-template-columns:1fr 1fr 1fr !important;
     }
-    .products.oceanwp-row.clr.grid li{
-        width: 280px;
+
+    .products.oceanwp-row.clr.grid li {
+        width: 300px;
     }
-    body .oceanwp-row .span_1_of_3{
+
+    body .oceanwp-row .span_1_of_3 {
         width: auto;
     }
-    .woocommerce-page .viewed__products  .products.oceanwp-row.clr.grid {
-        grid-template-columns:1fr!important;;
+
+    .pwb-product-carousel {
+
     }
+
+    .viewed__products .products.oceanwp-row.clr.grid.slick-slider,
+    .up-sells .products.oceanwp-row.clr.grid.slick-slider,
+    .cross-sells .products.oceanwp-row.clr.grid.slick-slider {
+        grid-template-columns:1fr !important;;
+    }
+
     .card__product {
         margin: 0 auto;
     }
+
 }
+
+@media (max-width: 1190px) {
+    .woocommerce-shop .products.oceanwp-row.clr.grid {
+        display: grid !important;
+        grid-template-columns:1fr 1fr !important;
+    }
+}
+
 @media (max-width: 1024px) {
     #wrap {
         margin: 0 auto;
@@ -1946,11 +1996,6 @@ a:focus {
         grid-template-columns:1fr 1fr;
         max-width: 950px !important;
         margin: 0 auto !important;
-    }
-
-    .products__container .product-type-simple {
-
-        width: 100% !important;
     }
 
     .favorite__list {
@@ -2020,9 +2065,7 @@ a:focus {
     }
 
     .price__container {
-        width: 90%;
-        margin: 0 auto;
-        height: 300px;
+        margin-bottom: 40px;
     }
 
     .product__info {
@@ -2045,20 +2088,41 @@ a:focus {
     .container {
         max-width: 98% !important;
     }
-    .cart-text{
+
+    .cart-text {
         display: none;
     }
-    .header_nav_card nav{
+
+    .header_nav_card nav {
         margin-left: 13px;
     }
-    .header_nav_card ul{
+
+    .header_nav_card ul {
         margin-right: 0;
     }
 }
+
 @media (max-width: 959px) {
-    #main #content-wrap{
+    #main #content-wrap {
         padding-top: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
+
+    .woocommerce-shop .products.oceanwp-row.clr.grid {
+        display: grid !important;
+        grid-template-columns:1fr 1fr 1fr !important;
+    }
+
+    .woocommerce-shop .woocommerce-page .products.oceanwp-row.clr.grid {
+        justify-items: center;
+    }
+
+    .woocommerce.columns-4 .products.oceanwp-row.clr.grid {
+        grid-template-columns:1fr 1fr !important;
+        justify-items: center;
+    }
+
     .woocommerce .oceanwp-toolbar {
         margin: 0px 10px !important;
     }
@@ -2074,7 +2138,8 @@ a:focus {
     .woocommerce-ordering {
         display: none;
     }
-    .woof_products_top_panel{
+
+    .woof_products_top_panel {
         padding-right: 10px;
         padding-left: 10px;
     }
@@ -2155,6 +2220,15 @@ a:focus {
         padding: 10px 8px;
     }
 }
+
+@media (max-width: 895px) {
+    .woocommerce-shop .woocommerce-page .products.oceanwp-row.clr.grid {
+        display: grid !important;
+        grid-template-columns:1fr 1fr !important;
+        justify-items: center;
+    }
+}
+
 @media (max-width: 767px) {
     .elementor-element-ad52475, .elementor-element-e106738, .elementor-element-3157973, .elementor-element-d970962, .elementor-element-c1c2523, .elementor-element-6be1368 {
         margin: 0px;
@@ -2181,10 +2255,6 @@ a:focus {
         grid-template-columns:1fr 1fr;
     }
 
-    .woocommerce-product-gallery--columns-4 {
-        width: 100% !important;
-    }
-
     .product__gallery {
         flex-direction: column;
     }
@@ -2205,7 +2275,30 @@ a:focus {
     .woof_show_auto_form.woof_btn_default {
         display: block;
     }
+
+    .woocommerce-product-gallery--columns-4 {
+        width: auto;
+        min-width: 360px;
+        max-width: 450px;
+    }
+
 }
+
+@media (max-width: 640px) {
+    .woocommerce-shop .woocommerce-page .products.oceanwp-row.clr.grid {
+        grid-template-columns:1fr !important;
+    }
+
+    .products.oceanwp-row.clr.grid {
+        grid-template-columns:1fr !important;
+    }
+
+    .woocommerce.columns-4 .products.oceanwp-row.clr.grid {
+        grid-template-columns: 1fr !important;
+        justify-items: center;
+    }
+}
+
 @media (max-width: 580px) {
 
     .woocommerce-page .products.oceanwp-row.clr.grid {
@@ -2213,6 +2306,7 @@ a:focus {
         grid-template-columns:1fr !important;
     }
 }
+
 @media (max-width: 480px) {
 
     .ehf-footer .elementor-element-bce0249 .hfe-nav-menu__layout-horizontal .hfe-nav-menu {
@@ -2272,30 +2366,32 @@ a:focus {
 
 
 /*Sidebar*/
-.woof_redraw_zone{
+.woof_redraw_zone {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
     color: #212121;
 }
-.woof_submit_search_form_container{
+
+.woof_submit_search_form_container {
     margin-bottom: 0;
     margin-top: 0;
 }
-.woof_checkbox_instock_container{
+
+.woof_checkbox_instock_container {
     padding: 20px 43px 20px 10px;
     margin-left: -10px;
     margin-right: -10px;
     background: #E5EDF8;
 }
 
-input[type="checkbox"].woof_checkbox_instock{
+input[type="checkbox"].woof_checkbox_instock {
     visibility: hidden;
     display: none;
 }
 
-.woof_checkbox_instock_inner label{
+.woof_checkbox_instock_inner label {
     margin-bottom: 10px;
     font-style: normal;
     font-weight: 600;
@@ -2305,7 +2401,8 @@ input[type="checkbox"].woof_checkbox_instock{
     cursor: pointer;
     vertical-align: middle;
 }
-.woof_checkbox_instock-custom-line{
+
+.woof_checkbox_instock-custom-line {
     display: inline-block;
     width: 41px;
     height: 14px;
@@ -2315,7 +2412,8 @@ input[type="checkbox"].woof_checkbox_instock{
     border-radius: 4px;
     box-shadow: 0px 1px 3px 0px #00000040;
 }
-.woof_checkbox_instock-custom-bubble{
+
+.woof_checkbox_instock-custom-bubble {
     content: '';
     display: block;
     width: 20px;
@@ -2330,11 +2428,13 @@ input[type="checkbox"].woof_checkbox_instock{
     transform: translateY(-50%);
     transition: all 0.4s ease;
 }
-.woof_checkbox_instock:checked + label .woof_checkbox_instock-custom-bubble{
+
+.woof_checkbox_instock:checked + label .woof_checkbox_instock-custom-bubble {
     left: 23px;
     background: #0E64B6;
 }
-.woof_checkbox_instock-info{
+
+.woof_checkbox_instock-info {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -2344,13 +2444,14 @@ input[type="checkbox"].woof_checkbox_instock{
     margin: 0;
 }
 
-.woof_price_filter_txt_container{
+.woof_price_filter_txt_container {
     display: flex;
     justify-content: space-between;
     position: relative;
 }
+
 .woof_price_filter_txt {
-    width: 102px!important;
+    width: 102px !important;
     height: 39px;
     padding: 9px 20px 9px 10px;
     background: #FFFFFF;
@@ -2364,11 +2465,13 @@ input[type="checkbox"].woof_checkbox_instock{
     text-align: center;
     color: #212121;
 }
-.woof_price_filter_txt::placeholder{
+
+.woof_price_filter_txt::placeholder {
     opacity: 0;
     font-size: 0;
 }
-.woof_price_filter_txt_container:before{
+
+.woof_price_filter_txt_container:before {
     content: "от";
     position: absolute;
     top: 50%;
@@ -2380,7 +2483,8 @@ input[type="checkbox"].woof_checkbox_instock{
     line-height: 22px;
     color: #CFCFCF;
 }
-.woof_price_filter_txt_container:after{
+
+.woof_price_filter_txt_container:after {
     content: "до";
     position: absolute;
     top: 50%;
@@ -2392,10 +2496,12 @@ input[type="checkbox"].woof_checkbox_instock{
     line-height: 22px;
     color: #CFCFCF;
 }
+
 .woof_checkbox_label {
-     margin-left: 0 !important;
+    margin-left: 0 !important;
 }
-input[type=checkbox]{
+
+input[type=checkbox] {
     width: 20px;
     height: 20px;
     position: relative;
@@ -2404,6 +2510,7 @@ input[type=checkbox]{
     border-radius: 3px;
     transition: all .3s linear;
 }
+
 input[type=checkbox]:checked:before {
     content: '';
     position: absolute;
@@ -2414,15 +2521,18 @@ input[type=checkbox]:checked:before {
     width: 20px;
     height: 20px;
     background-color: #0E64B6;
-    border: 1px solid  #0E64B6;
+    border: 1px solid #0E64B6;
     border-radius: 3px;
 }
+
 input[type=checkbox]:hover,
 input[type=checkbox]:active,
-input[type=checkbox]:focus{
+input[type=checkbox]:focus {
     border: 1px solid #0E64B6;
 }
+
 input[type=checkbox]:checked:hover:before {
     background-color: rgba(14, 100, 182, 0.88);
-    border: 1px solid  rgba(14, 100, 182, 0.88);
+    border: 1px solid rgba(14, 100, 182, 0.88);
 }
+
